search bar image fixed on mobile

--- a/app/assets/stylesheets/forms.css.sass
+++ b/app/assets/stylesheets/forms.css.sass
@@ -90,7 +90,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 .search-bar#q
   background-image: image-url('blog/search.png')
   background-repeat: no-repeat
-  background-position: 4% 44% 
+  background-position: 10px 7px 
   padding-left: 30px
 
 textarea
